--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <title>merhaba</title>
 </head>
 <body>
-sagdhjmö
+<h1>GIT HUB ÝLE ÇALIÞMA</h1>
+<h2>AÞAÐIDAKÝ KOMUTLARI SIRASIYLA EKLEYELÝM.</h2>
+<h3>git clone https://github.com/yilmaz34/htmlll.git</h3>
+<h2>dosyanýzýn içine girdikten sonra yazýlacak komutlar</h2>
+<h3>git add index.html</h3>
+<h3>git status</h3>
+<h3>git commit -m "Eklendi"</h3>
+<h3>git push origin master</h3>
 </body>
 </html>
